--- a/res/layout/class_selected_frag.xml
+++ b/res/layout/class_selected_frag.xml
@@ -6,13 +6,13 @@
                 android:background="#ffffff"
         >
 
-    <TextView
-            android:layout_width="wrap_content"
+    <ListView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/helloworld"
-            android:text="@string/hello_world"
-            android:textColor="#ff265afc"
-            android:textSize="50sp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_marginTop="60dp"
+            android:id="@+id/class_selected_list"
+            android:divider="#ffbababa"
+            android:headerDividersEnabled="true"
+            android:dividerHeight="0.5dp"/>
+
 </RelativeLayout>
