--- a/res/layout/class_list_item.xml
+++ b/res/layout/class_list_item.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/text"
-          android:textSize="20sp"
-          android:textColor="#000000"
-          android:padding="10dp"
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
         >
 
-</TextView>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_vertical"
+              android:id="@+id/text_item"
+              android:textSize="20sp"
+              android:textColor="#000000"
+            >
+
+    </TextView>
+
+</LinearLayout>
